--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </ul>
     </nav>
     <main>
-      <h1 class="page-title">hello world!</h1>
+      <h1 class="page-title">Kyan's Website</h1>
       <div class="about">
         <div class="about-image">
-          <img src="flowers.jpg" alt="Purple Flower" height="150" width="150" />
+          <img src="me.png" alt="Me" height="200" width="80" />
         </div>
         <div class="about-text">
           <p>
