--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="page-title">Kyan's Website</h1>
       <div class="about">
         <div class="about-image">
-          <img src="me.png" alt="Me" height="200" width="80" />
+          <img src="flower.jpg" alt="I love nature!" height="200" width="80" />
         </div>
         <div class="about-text">
           <p>
