--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    body {
+  background-color: blue;
+  position: relative;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
     <title>Personal Website</title>
   </head>
   <body>
